--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "vue-draggable-resizable": "^2.2.0"
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
