--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
     "nuxt": "^2.14.0",
-    "vue-draggable-resizable": "^2.2.0"
+    "vue-draggable-resizable": "^2.2.0",
+    "vue-i18n": "^8.22.0"
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
